--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
           <div class="home-skills">
             <h3 class="home-skills-title">Tech Stack</h3>
             <div class="home-skills-content grid">
-              <img src="/img/html.png" alt="image" class="home-skills-img">
-              <img src="/img/css.png" alt="image" class="home-skills-img">
-              <img src="/img/js.png" alt="image" class="home-skills-img">
-              <img src="/img/laravel.png" alt="image" class="home-skills-img">
-              <img src="/img/figma.png" alt="image" class="home-skills-img">
-              <img src="/img/mysql.png" alt="image" class="home-skills-img">
+              <img src="../img/html.png" alt="image" class="home-skills-img">
+              <img src="../img/css.png" alt="image" class="home-skills-img">
+              <img src="../img/js.png" alt="image" class="home-skills-img">
+              <img src="../img/laravel.png" alt="image" class="home-skills-img">
+              <img src="../img/figma.png" alt="image" class="home-skills-img">
+              <img src="../img/mysql.png" alt="image" class="home-skills-img">
             </div>
           </div>
         </div>
