--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
           <div class="home-skills">
             <h3 class="home-skills-title">Tech Stack</h3>
             <div class="home-skills-content grid">
-              <img src="../img/html.png" alt="image" class="home-skills-img">
-              <img src="../img/css.png" alt="image" class="home-skills-img">
-              <img src="../img/js.png" alt="image" class="home-skills-img">
-              <img src="../img/laravel.png" alt="image" class="home-skills-img">
-              <img src="../img/figma.png" alt="image" class="home-skills-img">
-              <img src="../img/mysql.png" alt="image" class="home-skills-img">
+              <img src="img/html.png" alt="image" class="home-skills-img">
+              <img src="img/css.png" alt="image" class="home-skills-img">
+              <img src="img/js.png" alt="image" class="home-skills-img">
+              <img src="img/laravel.png" alt="image" class="home-skills-img">
+              <img src="img/figma.png" alt="image" class="home-skills-img">
+              <img src="img/mysql.png" alt="image" class="home-skills-img">
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
       <div class="work-container container grid">
         <article class="work-card">
           <div class="work grid">
-            <img src="/img/standing_desk.png" alt="image" class="work-img">
+            <img src="img/standing_desk.png" alt="image" class="work-img">
 
             <h3 class="work-title">STANDING DESK ECOMMERCE</h3>
 
@@ -138,7 +138,7 @@
       <div class="work-container container grid">
         <article class="work-card">
           <div class="work grid">
-            <img src="/img/cafe.png" alt="image" class="work-img">
+            <img src="img/cafe.png" alt="image" class="work-img">
 
             <h3 class="work-title">CAFE</h3>
 
